--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,19 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
+        <activity android:name=".ForgotPasswordActivity"
+            android:label="Preferences">
+            </activity>
+
+        <activity android:name=".RestoreCodeActivity"
+            android:label="Preferences">
+        </activity>
+
+        <activity android:name=".NewPasswordActivity"
+            android:label="Preferences">
+        </activity>
+
     </application>
 
 </manifest>
